# elisprs

./: BUGS.md  CHANGELOG.md  Cargo.toml  README.md  package.json
.github/workflows/: ci.yml  release.yml
completions/: _elisp
docs/: index.html  reference.html  report.html
editors/intellij/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
editors/intellij/src/main/kotlin/com/menketechnologies/elisprs/: ElisprsBraceMatcher.kt  ElisprsColorSettingsPage.kt  ElisprsColors.kt  ElisprsCommenter.kt  ElisprsDebugLog.kt  ElisprsFileType.kt  ElisprsIcons.kt  ElisprsLanguage.kt  ElisprsLexer.kt  ElisprsParserDefinition.kt  ElisprsQuoteHandler.kt  ElisprsSettings.kt  ElisprsSettingsConfigurable.kt  ElisprsSmartEnterProcessor.kt  ElisprsSpellcheckingStrategy.kt  ElisprsSyntaxHighlighter.kt  ElisprsTokenTypes.kt  ElisprsTypedHandler.kt
editors/intellij/src/main/kotlin/com/menketechnologies/elisprs/actions/: CreateElisprsFileAction.kt  RunElisprsFileAction.kt
editors/intellij/src/main/kotlin/com/menketechnologies/elisprs/dap/: ElisprsBreakpointHandler.kt  ElisprsBreakpointType.kt  ElisprsDapClient.kt  ElisprsDebugProcess.kt  ElisprsDebuggerEditorsProvider.kt  ElisprsEvaluator.kt  ElisprsStackFrame.kt  ElisprsSuspendContext.kt  ElisprsValue.kt
editors/intellij/src/main/kotlin/com/menketechnologies/elisprs/lsp/: ElisprsLspServerDescriptor.kt  ElisprsLspServerSupportProvider.kt
editors/intellij/src/main/kotlin/com/menketechnologies/elisprs/navigate/: ElisprsGotoDeclarationHandler.kt
editors/intellij/src/main/kotlin/com/menketechnologies/elisprs/refactor/: ElisprsRefactoringSupportProvider.kt  ElisprsRenameHandler.kt
editors/intellij/src/main/kotlin/com/menketechnologies/elisprs/run/: ElisprsDebugRunner.kt  ElisprsProgramRunner.kt  ElisprsRunConfiguration.kt  ElisprsRunConfigurationEditor.kt  ElisprsRunConfigurationOptions.kt  ElisprsRunConfigurationProducer.kt  ElisprsRunConfigurationType.kt
editors/intellij/src/test/kotlin/com/menketechnologies/elisprs/: ElisprsCommenterTest.kt  ElisprsLexerTest.kt  ElisprsSettingsTest.kt  ElisprsSmartEnterProcessorTest.kt
examples/: adversarial-panics.el  alloc-overflow.el  arithmetic.el  buffer-editing.el  buffers.el  button-type.el  byte-run-defs.el  char-syntax-tables.el  cl-class-dag.el  cl-declaim.el  cl-defun.el  cl-lambda-list-validation.el  cl-loop.el  cl-seq-destructive.el  cl-seq-edge.el  cl-seq-testfn.el  cl-sets.el  coding-systems.el  control-flow.el  custom-autoload.el  custom-initialize-delay.el  custom-load-preload.el  custom-set-default.el  custom-set-variables.el  data-model.el  decode-char.el  defcustom-decl.el  define-widget.el  defvaralias-syntax-tables.el  demo.el  error-data.el  errors.el  ert.el  exec-path.el  file-name-handler-alist.el  functions.el  gv.el  gz-load-rep-suffix.el  help-fundoc-usage.el  keymap.el  (+31 more)
examples/load-fixtures/: helper.el  noprov.el  reqfeat.el
man/man1/: elisp.1  elispall.1
scripts/: fuzz_parity.sh  run_examples.sh  test.sh
scripts/fuzz/: drive.el  gen.el
src/: aot.rs  aot_runtime.rs  banner.rs  builtins.rs  cache.rs  callable.rs  compiler.rs  dap.rs  error.rs  host.rs  intercepts.rs  interp.rs  lib.rs  lsp.rs  main.rs  prelude.rs  reader.rs  regexp.rs  repl.rs  rust_ffi.rs
tests/: bignums.rs  builtins.rs  cache_heap_image.rs  dap_integration.rs  error_object_identity.rs  ert.rs  eval.rs  examples.rs  ffi.rs  intercepts.rs  library.rs  math.rs  parity_bool_vector.rs  parity_case_fold_and_lists.rs  parity_functions_and_errors.rs  parity_fuzz_findings.rs  parity_list_walks.rs  parity_macroexpand_intrinsics.rs  parity_nadvice.rs  parity_record_type.rs  parity_ring.rs  parity_text_property_search.rs  parity_types_and_indices.rs  predicates_io.rs  prelude.rs  reader.rs  regexp.rs
