[package]
name = "elisprs"
version = "0.1.1"
edition = "2021"
authors = ["MenkeTechnologies"]
description = "Emacs Lisp as a fusevm frontend: a reader and compiler to fusevm::Chunk on an ElispHost object heap, with no bespoke VM or JIT"
license = "MIT OR Apache-2.0"
repository = "https://github.com/MenkeTechnologies/elisprs"
homepage = "https://menketechnologies.github.io/elisprs/"
documentation = "https://docs.rs/elisprs"
readme = "README.md"
keywords = ["emacs", "lisp", "elisp", "interpreter", "fusevm"]
categories = ["command-line-utilities", "compilers"]

[[bin]]
name = "elisp"
path = "src/main.rs"

[lib]
name = "elisprs"
path = "src/lib.rs"
# staticlib so an AOT object can be linked against the elisprs runtime (the
# `fusevm_aot_register_builtins` hook + the fusevm AOT runtime) into a
# standalone native executable.
crate-type = ["rlib", "staticlib"]

[dependencies]
# elisp executes on fusevm. elisprs is a pure frontend: it lowers elisp to
# fusevm bytecode (src/compiler.rs) and hosts the elisp object heap
# (src/host.rs, reached from fusevm's extension handler). The cons/symbol/
# vector cells ride through the VM as `Value::Obj(u32)` handles into that heap.
#
# `jit-disk-cache` turns on fusevm's three-tier Cranelift JIT *and* its
# persistent on-disk cache of compiled native code (keyed by chunk hash), so
# hot elisp loops trace-compile and warm runs skip recompilation. The cache
# directory defaults to fusevm's own, or `FUSEVM_JIT_CACHE_DIR` if set.
fusevm = { version = "0.14.3", features = ["jit-disk-cache", "aot"] }

# `elisp --lsp` speaks LSP over stdio (src/lsp.rs); `elisp --dap` speaks the
# Debug Adapter Protocol over stdio (src/dap.rs). libc gives the DAP server a
# pipe + dup2 to capture the debuggee's stdout (princ/prin1) so program output
# streams as `output` events instead of corrupting the JSON-RPC channel.
lsp-server = "0.7.9"
lsp-types = "0.97.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# rkyv-backed bytecode cache at ~/.elisprs/scripts.rkyv (mirrors zshrs/strykelang):
# the outer shard is a zero-copy rkyv archive; the inner per-form fusevm::Chunk
# and heap image are bincode (fusevm::Chunk is serde-owned, not rkyv::Archive).
rkyv = { version = "0.7", features = ["validation", "archive_le", "size_32"] }
bincode = "1"
libc = "0.2"
# Emacs-Lisp regexps (string-match / replace-regexp-in-string / match-string).
# elisp regexp syntax is translated to the `regex`-dialect in src/regexp.rs;
# `fancy-regex` is the matching engine — it adds a backtracking fallback for
# backreferences (\1..\9) while keeping the linear `regex` crate fast path for
# patterns that don't need it.
fancy-regex = "0.14"
