[package]
name = "elisprs"
version = "0.1.6"
edition = "2021"
authors = ["MenkeTechnologies <linux.dev25@gmail.com>"]
description = "Emacs Lisp as a fusevm frontend: a reader and compiler to fusevm::Chunk on an ElispHost object heap, with no bespoke VM or JIT"
license = "MIT OR Apache-2.0"
repository = "https://github.com/MenkeTechnologies/elisprs"
homepage = "https://menketechnologies.github.io/elisprs/"
documentation = "https://docs.rs/elisprs"
readme = "README.md"
keywords = ["emacs", "lisp", "elisp", "interpreter", "fusevm"]
categories = ["command-line-utilities", "compilers"]

[[bin]]
name = "elisp"
path = "src/main.rs"

# Offline generator for docs/reference.html — renders the LSP hover/completion
# corpus (src/lsp.rs) as a static reference page. Run before pushing Pages.
[[bin]]
name = "gen-docs"
path = "src/bin/gen_docs.rs"

[lib]
name = "elisprs"
path = "src/lib.rs"
# staticlib so an AOT object can be linked against the elisprs runtime (the
# `fusevm_aot_register_builtins` hook + the fusevm AOT runtime) into a
# standalone native executable.
crate-type = ["rlib", "staticlib"]

[dependencies]
# elisp executes on fusevm. elisprs is a pure frontend: it lowers elisp to
# fusevm bytecode (src/compiler.rs) and hosts the elisp object heap
# (src/host.rs, reached from fusevm's extension handler). The cons/symbol/
# vector cells ride through the VM as `Value::Obj(u32)` handles into that heap.
#
# `jit-disk-cache` turns on fusevm's three-tier Cranelift JIT *and* its
# persistent on-disk cache of compiled native code (keyed by chunk hash), so
# hot elisp loops trace-compile and warm runs skip recompilation. The cache
# directory defaults to fusevm's own, or `FUSEVM_JIT_CACHE_DIR` if set.
fusevm = { version = "0.14.6", features = ["jit-disk-cache", "aot"] }

# `elisp --lsp` speaks LSP over stdio (src/lsp.rs); `elisp --dap` speaks the
# Debug Adapter Protocol over stdio (src/dap.rs). libc gives the DAP server a
# pipe + dup2 to capture the debuggee's stdout (princ/prin1) so program output
# streams as `output` events instead of corrupting the JSON-RPC channel.
lsp-server = "0.7.9"
lsp-types = "0.97.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# rkyv-backed bytecode cache at ~/.elisprs/scripts.rkyv (mirrors zshrs/strykelang):
# the outer shard is a zero-copy rkyv archive; the inner per-form fusevm::Chunk
# and heap image are bincode (fusevm::Chunk is serde-owned, not rkyv::Archive).
rkyv = { version = "0.7", features = ["validation", "archive_le", "size_32"] }
bincode = "1"
libc = "0.2"
# Emacs promotes an integer that leaves fixnum range to a bignum, so parity needs
# arbitrary-precision integers: `(expt 2 70)`, `(* 1e12 1e12)`, `(1+ most-positive-fixnum)`.
# num-bigint is the rust-num implementation — pure Rust (no GMP to link, unlike
# Emacs itself), vendorable, and stable since 2015. The `serde` feature lets a
# bignum ride through `SerObj` into the AOT heap image like every other heap object.
num-bigint = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
num-integer = "0.1"

# Emacs-Lisp regexps (string-match / replace-regexp-in-string / match-string).
# elisp regexp syntax is translated to the `regex`-dialect in src/regexp.rs;
# `fancy-regex` is the matching engine — it adds a backtracking fallback for
# backreferences (\1..\9) while keeping the linear `regex` crate fast path for
# patterns that don't need it.
fancy-regex = "0.14"
# Deeply-nested reader input and deep Lisp recursion would overflow the fixed
# 8 MiB OS thread stack (the reader is recursive-descent; each Lisp call runs a
# nested fusevm VM). `stacker` grows the stack on demand on the SAME thread, so
# the thread-local `ElispHost` stays reachable — Emacs's reader is likewise
# unbounded, and Lisp recursion is bounded by `max-lisp-eval-depth`, not a
# crash. rust-lang maintained, vendorable, durable.
stacker = "0.1"
# The Emacs 30.2 lisp tree ships as `*.el.gz`; `load' transparently gunzips them
# (jka-compr's `load-file-rep-suffixes' = `("" ".gz")'). flate2's default
# `rust_backend' is pure-Rust miniz_oxide (no C toolchain, vendorable, durable),
# so `(load "lib")' resolves and decompresses a `.gz`-only library in memory.
flate2 = "1"
# `elisp --repl` (and the bare-tty fallthrough) is a utop-style line editor
# backed by reedline: Tab completion over the LSP wordlist, a live stats
# banner, and a `~/.elisprs/history` file. nu-ansi-term paints the status
# bar; sysinfo (system feature only) feeds the banner memory row; toml parses
# `~/.elisprs/config.toml` for the emacs/vi edit-mode selector. libc (already a
# dependency above) supplies localtime_r + TIOCGWINSZ for the status bar.
reedline = "0.47.0"
nu-ansi-term = "0.50"
sysinfo = { version = "0.38", default-features = false, features = ["system"] }
toml = "0.8"
